2/15代码部分更新，因为图片实在找不到地址就丢文件夹里上传了

--- a/fuhuo987/代码部分.md
+++ b/fuhuo987/代码部分.md
@@ -63,6 +63,8 @@
 
 <li class="dhl"><a href="#ml">角色目录</a></li>
 
+<li class="dhl"><a href="#ndtp">年度图片</a></li>
+
 </ul>
 
 </nav>
@@ -869,9 +871,55 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 
 </div>
 
-<footer class="foot"></footer>
+<div class="tpqhwb" id="ndtp">
+
+<div style="border-left: 10px solid pink;">
+
+<h1 style="color: aqua;">年度图片</h1>
 
 </div>
+
+<h2>————褪色的照片、记忆</h2>
+
+<h1 class="fenge">————幸福的时间、轨迹</h1>
+
+<div class="container">
+
+<div class="slider">
+
+<div class="box" style="--img:url('../tpqh/2024.png')" id="2024"></div>
+
+<div class="box" style="--img:url('../tpqh/2018.png')" id="2018"></div>
+
+<div class="box" style="--img:url('../tpqh/2019.png')" id="2019"></div>
+
+<div class="box" style="--img:url('../tpqh/2020.png')" id="2020"></div>
+
+<div class="box" style="--img:url('../tpqh/2021.png')" id="2021"></div>
+
+<div class="box" style="--img:url('../tpqh/2022.png')" id="2022"></div>
+
+<div class="box" style="--img:url('../tpqh/2023.png')" id="2023"></div>
+
+</div>
+
+<div class="botton">
+
+<span class="prev">上一张</span>
+
+<span class="next">下一张</span>
+
+</div>
+
+</div>
+
+<div style="bottom: 80px;left: 50px;position: absolute;" class="heimu">这个是真好玩: )</div>
+
+</div>
+
+</div>
+
+<footer class="foot">白纸为空&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;我为<span style="color: #8adfff;">色彩</span></footer>
 
 <script src="./js/1.js"></script>
 
@@ -887,6 +935,8 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 * ## css文档
 ### style.css
 ```
+  
+
 .hbg{
 
 background-color: yellow;
@@ -1060,6 +1110,8 @@ width: 1000px;
 z-index: 0;
 
 background: rgba(236, 235, 233, 0.9);
+
+padding-bottom: 50px;
 
 }
 
@@ -1706,6 +1758,226 @@ position: relative;
 z-index: -1;
 
 }
+
+.foot{
+
+position: relative;
+
+z-index: 0;
+
+height: 150px;
+
+width: 100%;
+
+background-color: rgba(255, 255, 255);
+
+margin: 0;
+
+margin-top: 250px;
+
+font-size: 60px;
+
+font-weight: 600;
+
+font-family: 'STKaiti';
+
+border-top: 1px solid rgba(0,0,0 ,0.1 );
+
+}
+
+body{
+
+padding: 0;
+
+margin: 0;
+
+}
+
+.container{
+
+width:560px;
+
+height: 311.68px;
+
+overflow: hidden;
+
+display: flex;
+
+align-items: center;
+
+justify-content: center;
+
+}
+
+.slider{
+
+position: absolute;
+
+top: 40%;
+
+transform: translate(-50%, -50%);
+
+left: 50%;
+
+width: 700px;
+
+height: 389.6px;
+
+border-radius:20px ;
+
+}
+
+.box{
+
+position: absolute;
+
+top: 80%;
+
+transform:translateY(-50%) ;
+
+width: 200px;
+
+height: 100px;
+
+background: var(--img);
+
+background-size: cover;
+
+background-position: center;
+
+border-radius: 20px;
+
+transition: 0.5s;
+
+box-shadow:0 25px 50px rgba(0,0,0,0.5);
+
+border: 5px solid #fff;
+
+}
+
+.box:nth-child(1),.box:nth-child(2){
+
+position: absolute;
+
+top: 0;
+
+left: 0;
+
+width: 100%;
+
+height: 100%;
+
+transform: translateY(0);
+
+box-shadow: 0 25px 50px rgba(0,0,0,0);
+
+}
+
+.box:nth-child(3){
+
+z-index: 1;
+
+top: 480px;
+
+left: 0px;
+
+}
+
+.box:nth-child(4){
+
+left: 250px;
+
+top: 480px;
+
+}
+
+.box:nth-child(5){
+
+left: 500px;
+
+top: 480px;
+
+}
+
+.box:nth-child(n+6){
+
+left: 500px;
+
+top: 630px;
+
+opacity: 0;
+
+}
+
+.botton{
+
+position: absolute;
+
+bottom: 15px;
+
+display: flex;
+
+gap: 20px;
+
+transform: translate(-50%, 0%);
+
+left: 50.7%;
+
+top: 80%;
+
+user-select: none;
+
+}
+
+.botton span{
+
+position: relative;
+
+width: 100px;
+
+height: 50px;
+
+background: #8adfff;
+
+cursor: pointer;
+
+display: flex;
+
+justify-content: center;
+
+align-items: center;
+
+border-radius: 10px;
+
+color: #fff;
+
+font-size: 24px;
+
+font-weight: bold;
+
+}
+
+.botton span:active{
+
+opacity: 0.5;
+
+}
+
+.tpqhwb{
+
+background: rgba(255, 255, 255, 0.5);
+
+width: 800px;
+
+margin: 30px auto 30px auto;
+
+padding: 0px 20px 20px 0;
+
+position: relative;
+
+height: 900px;
+
+}
 ```
 <br>
 
@@ -2103,21 +2375,27 @@ if(jl<800){
 
 dhlbs(box[0]);
 
-dhnr.scrollTop=0;
-
 } else if(jl>=800&&jl<1360){
 
 dhlbs(box[1]);
+
+dhnr.scrollTop=0;
 
 }else if(jl>=1360&&jl<2150){
 
 dhlbs(box[2]);
 
-}else if(jl>=2150){
+}else if(jl>=2150&&jl<3650){
 
 dhlbs(box[3]);
 
-dhnr.scrollTop=93;
+dhnr.scrollTop=62;
+
+}else if(jl>=3650){
+
+dhlbs(box[4]);
+
+dhnr.scrollTop=62;
 
 }
 
@@ -2210,6 +2488,54 @@ ys.style.color='black';
 ys2.innerHTML=''
 
 }
+
+}
+
+function tpqh(){
+
+let next=document.querySelector('.next')
+
+let prev=document.querySelector('.prev')
+
+let slider=document.querySelector('.slider')
+
+gtt()
+
+next.addEventListener('click',function(){
+
+let box=document.querySelectorAll('.box');
+
+slider.appendChild(box[0]);
+
+let title=box[0].getAttribute('title');
+
+gtt()
+
+})
+
+prev.addEventListener('click',function(){
+
+let box=document.querySelectorAll('.box');
+
+slider.prepend(box[box.length-1]);
+
+gtt()
+
+})
+
+}
+
+tpqh()
+
+function gtt() {
+
+document.querySelectorAll('.box').forEach(function(a){a.setAttribute('title','')})
+
+let tt=document.querySelectorAll('.box')[1]
+
+let nf=tt.getAttribute('id')
+
+tt.setAttribute('title',nf);
 
 }
 ```
@@ -3240,7 +3566,7 @@ ss.png
 co.png
 ![输入图片说明](https://www.project-imas.wiki/images/6/6e/CoMETIK_Unit_logo.png)
 * **
-* ## ip1文件夹
+* ### ip1文件夹
 ![Mano.png ](https://www.project-imas.wiki/images/1/1d/SCMano.png)
 ![Hiori.png ](https://www.project-imas.wiki/images/1/19/SCHiori.png)
 ![Meguru.png ](https://www.project-imas.wiki/images/0/0d/SCMeguru.png)
@@ -3270,7 +3596,7 @@ co.png
 ![Hana.png](https://www.project-imas.wiki/images/7/7e/SCHana.png)
 ![Haruki.png](https://www.project-imas.wiki/images/c/c0/SCHaruki.png)
 * **
-* ## sign文件夹
+* ### sign文件夹
 ![Mano_Sign.png ](https://www.project-imas.wiki/images/9/98/ManoSakuragiSign.png)
 ![Hiori_Sign.png ](https://www.project-imas.wiki/images/6/61/HioriKazanoSign.png)
 ![Meguru_Sign.png ](https://www.project-imas.wiki/images/6/69/MeguruHachimiyaSign.png)
@@ -3299,3 +3625,12 @@ co.png
 ![Luca_Sign.png](https://www.project-imas.wiki/images/8/83/LucaIkarugaSign.png)
 ![Hana_Sign.png](https://www.project-imas.wiki/images/1/19/HanaSuzukiSign.png)
 ![Haruki_Sign.png](https://www.project-imas.wiki/images/b/bb/HarukiIkutaSign.png)
+* **
+* ### tpqh文件夹
+![2019.png](/imgs/2025-02-16/Z4NVTEpjXL4e8w5P.jpeg)
+![2020.png](/imgs/2025-02-16/3xbW7trpSy7xi2mf.jpeg)
+![2023.png](/imgs/2025-02-16/QEIC8bRr7wnYHEdI.jpeg)
+![2024.png](/imgs/2025-02-16/SGJzZ8rpDubulUUx.jpeg)
+![2021.png](/imgs/2025-02-16/zmzFirWTK6KzvQQa.webp)
+![2022.png](/imgs/2025-02-16/5uEKk149kpPouUhi.webp)
+![2018.png](/imgs/2025-02-16/7mMCpje4r46d7bgj.png)
