--- a/fuhuo987/陈俊翰.md.1.md
+++ b/fuhuo987/陈俊翰.md.1.md
@@ -1782,7 +1782,7 @@ http({
      if(data){
      res=await fetch(url,{
         method:method,
-        headers{
+        headers:{
         'content-Type':'application/json'
         },
         body:JSON.stringify(data)
@@ -1793,6 +1793,118 @@ http({
     return res.json();
  }
  ```
+* **
+* ## axios
+* ### axios简介
+axios是一个基于promise实现的网络请求库，可以运行在浏览器和nodejs中。在nodejs中基于http模块实现，在浏览器中基于XMLHttpRequest实现
+
+原生的XMLHttpRequest在编写异步请求时比较繁琐。在创建XMLHttpRequest实例时需要写很多兼容代码，原生的XMLHttpRequest功能比较简陋，请求和响应的处理会有很多的冗余代码，多个异步请求容易造成回调地狱
+
+axios 提供了更简洁的 API、更好的错误处理、自动转换 JSON 数据、请求取消等特性，使用起来更方便且功能更强大 
+* **
+* ### axios的基本使用
+```
+axios({
+url:'地址',}).them(res=>{console.log(res);})
+```
+默认是使用get方式进行请求
+
+如果要指定请求方式
+```
+axios({
+url:'地址',
+method:'get'
+}).them(res=>{console.log(res);})
+```
+如果要发送含参get请求
+```
+axios({
+url:'地址',
+params:{
+id:'1234'
+}
+}).them(res=>{console.log(res);})
+```
+使用POST方式发送无参请求
+```
+axios({
+url:'地址',
+method:'post'
+}).them(res=>{console.log(res);})
+```
+使用POST方式发送含参请求
+```
+axios({
+url:'地址',
+method:'post',
+data:{
+name:'fuhuo'
+}
+}).them(res=>{console.log(res);})
+```
+axios会自动指定header的```'Content-Type```为```"application/json```，不需要像fetch一样声明，而且fetch的json参数需要手动序列化
+
+get请求可以简写成这样
+```
+axios.get('地址',{params:{
+    id='fuhuo'
+    }
+}).then(res=>{console.log(res)
+}).catch(err=>{console.log(err);})
+```
+
+同理post请求也可以这么写
+```
+axios.post('地址',{
+id:'1234',
+name:'fuhuo'
+}).then(res=>{
+    console.log(res);
+    }).catch(err=>{
+    console.log(err);
+    })
+```
+<br>
+
+因为axios也是基于promise，所有它和fetch一样能写成async/await的语法
+* **
+* ### 拦截器
+Axios 支持请求和响应拦截器，可以在请求发送前或响应接收后进行一些预处理或后处理操作
+
+```
+const axios = require('axios');
+ 
+// 添加请求拦截器
+axios.interceptors.request.use(config => {
+  // 在发送请求之前做些什么
+  console.log('Request Interceptor:', config);
+  return config;
+}, error => {
+  // 对请求错误做些什么
+  console.error('Request Error:', error);
+  return Promise.reject(error);
+});
+ 
+// 添加响应拦截器
+axios.interceptors.response.use(response => {
+  // 对响应数据做些什么
+  console.log('Response Interceptor:', response);
+  return response;
+}, error => {
+  // 对响应错误做些什么
+  console.error('Response Error:', error);
+  return Promise.reject(error);
+});
+ 
+// 发送请求
+axios.get('https://api.example.com/data')
+  .then(response => {
+    console.log(response.data);
+  })
+  .catch(error => {
+    console.error(error);
+  });
+```
 * **
 
 
