--- a/fuhuo987/陈俊翰.md.1.md
+++ b/fuhuo987/陈俊翰.md.1.md
@@ -1906,6 +1906,122 @@ axios.get('https://api.example.com/data')
   });
 ```
 * **
+* ## Vue
+vue是前端优秀框架，是一套用于构建用户界面的渐进式框架
+
+在经历一番苦战后终于安装好了vue
+* **
+* ###  模板语法
+vue.js使用了基于HTML的模板语法，允许开发者声明式地将DOM绑定至底层组件实例的数据。所有vue.js的模板都是合法的HTML，能被遵循规范的浏览器和HTML解析器解析
+
+在底层的实现上，vue把模板编译成DOM渲染函数，vue能智能地计算出最少需要渲染多少个组件，并把DOM的操作次数减少到最小
+
+**文本**
+数据绑定最常见的形式就是使用双大括号语法的文本插值
+```
+<span>message:{{msg}}</span>
+```
+一般配合js的```data()```设置数据
+```
+export default{
+name:'helloworld',
+data(){
+    return{
+        msg:'消息'
+    }}
+}
+```
+<br>
+
+在```<template></template>```里写HTML内容
+
+**原始HTML**
+双大括号会将数据解释为普通文本而非HTML代码，为了输出真正的HTML代码，需要使用```v-html```指令
+```
+<div>{{tp}}</div>    //相当于innerText
+<div v-html='tp'></div>    //相当于innerHTML
+```
+
+**属性 Attribute**
+双大括号语法不能在HTML属性中使用，但是可以使用```v-bind```指令
+```
+<div v-bind:class="zheshilei"></div>
+```
+```v-bind```可以简写成```:```，也就是说上面的代码可以这么写
+```
+<div :class="zheshilei"></div>
+```
+<br>
+
+**使用js表达式**
+在模板中，我们一直都只绑定简单的property键值，vue.js提供了完全的js表达式支持。需要注意的是，每个绑定只能包含单个表达式
+```
+{{num+1}}
+{{flag?'YES':'NO'}}
+```
+* **
+* ### 条件渲染
+```v-if```指令用于条件性渲染一些内容，这些内容只会在指令的表达式返回```true```的时候渲染
+```
+<p v-if='flag'>123456789</p>
+```
+```
+data(){
+return{flag:true}
+}
+```
+<br>
+
+还可以使用```v-else```指令来表示```v-if```的else块
+```
+<p v-if='flag'>123456789</p>
+<p v-else>987654321</p>
+```
+<br>
+
+另一个用来条件性展示元素的选项是```v-show```指令
+```
+<p v-show='flag'>1234</p>
+```
+<br>
+
+```v-if```是“真正”的条件渲染，因为它会确保在切换过程中条件块内的事件监听器和子组件适当的被销毁和重建
+
+```v-if```是惰性的，初始渲染时条件为假那就什么都不做，只有到第一次条件为真时才会开始渲染条件块
+
+相比之下，```v-show```就要简单很多，不管条件是什么，元素都会被渲染，只是简单地基于CSS进行切换
+
+```v-if```具有更好的切换开销，```v-show```具有更高的初始渲染开销，如果要频繁切换就用```v-show```，反之用```v-if```
+* **
+* ### 列表渲染
+可以使用```v-for```基于一个数组来渲染一个列表，它需要使用```item in items```形式的特殊语法，其中items时源数据数组，item是被迭代的数组元素的别名
+
+```
+<ul>
+<li v-for='item in list'>{{item.msg}}<li>
+</ul>
+```
+```
+data(){
+retrun{
+    list:[{msg:'fuhuo'},{msg:'1234'}]
+    }
+}
+```
+<br>
+
+当vue正在更新用```v-for```渲染的元素列表时，它默认使用“就地更新”的策略。如果数据项的顺序被改变，它会就地更新每个元素，确保它们在每个索引位置被正确渲染
+
+为了给vue提示以便它能跟踪每一个节点的身份，需要给每项提供一个唯一的属性```key```
+```
+<div v-for="item in items":key="item.id"></div>
+```
+如果你的数组里没有id这种唯一的东西，就可以这么写
+ ```
+ <div v-for="(item,index) in items":key="index"></div>
+ ```
+ 这是因为数组中元素的下标也是唯一的。但是一般来说数据都要有id
+* **
 
 
 
