--- a/fuhuo987/代码部分.md
+++ b/fuhuo987/代码部分.md
@@ -95,7 +95,7 @@
 
 <a href="https://shinycolors.enza.fun/" target="_blank"><img src="283pro.png" alt="283PRO场景" class="283pro"
 
-width="400px" style="float: right;" title="点击进入283PRO"></a>
+width="400px" style="float: right;user-select: none;" title="点击进入283PRO"></a>
 
 <ul>
 
@@ -935,8 +935,6 @@ transform: translate(-50%, -75%); user-select: none;" class="ho" id="qhs">28colo
 * ## css文档
 ### style.css
 ```
-  
-
 .hbg{
 
 background-color: yellow;
@@ -1411,6 +1409,8 @@ font-size: 20px;
 
 height: 80px;
 
+user-select: none;
+
 }
 
 th{
@@ -1446,6 +1446,8 @@ z-index: -1;
 position: absolute;
 
 display: block;
+
+user-select: none;
 
 }
 
@@ -2162,7 +2164,7 @@ background-color: rgba(153,153,153,0.1);
 目前没怎么学，不太会用
 ### 1.js
 ```
-var currentDate = new Date();
+function wenhou(){var currentDate = new Date();
 
 var Hour = currentDate.getHours();
 
@@ -2182,7 +2184,9 @@ alert("晚上要不要去看星星呢~");
 
 }else{alert("这么晚了还不睡觉，Mr.作息失调");}
 
-  
+}
+
+wenhou()
 
 var bg = document.querySelector('.biaoge')
 
@@ -2506,8 +2510,6 @@ next.addEventListener('click',function(){
 let box=document.querySelectorAll('.box');
 
 slider.appendChild(box[0]);
-
-let title=box[0].getAttribute('title');
 
 gtt()
 
