--- a/fuhuo987/陈俊翰.md.1.md
+++ b/fuhuo987/陈俊翰.md.1.md
@@ -2022,6 +2022,106 @@ retrun{
  ```
  这是因为数组中元素的下标也是唯一的。但是一般来说数据都要有id
 * **
+* ### 监听事件
+可以用```v-on```指令（通常缩写为```@```符号）来监听DOM事件，并在触发事件时执行一些JS。语法为```v-on:click="方法名"```或者```@click="方法名"```
+
+许多事件处理逻辑会比较复杂，直接把JS代码写在```v-on```是不可行的，```v-on```还可以接收一个需要调用方法的名称
+
+除此之外还有事件传递参数，如：
+```
+<botton @click='say(hi)'></botton>
+```
+```
+methods:{
+say(msg){console.log(msg);}
+}
+```
+
+* **
+* ### 表单输入绑定
+可以用```v-model```指令在表单```<input>```、```textarea```、```select```元素上创建双向数据绑定。它会根据控件类型自动选取正确的方法来更新元素
+```
+<input type='text' v-model='username'>
+<p>{{username}}</p>
+```
+```
+export default{
+data(){
+return{username:''}
+   }
+}
+```
+可以同步增加和删除
+
+**修饰符**
+```.lazy```： 一般情况下，```v-model```在每次```input```事件触发后将输入框的值和数据进行同步，增加该修饰符就会变成在```change```事件后进行同步（如回车或失去焦点）
+
+```.trim```： 自动过滤用户输入首尾的空格
+* **
+* ### 组件基础
+**单文件组件**
+vue单文件组件（又叫```*.vue````文件，缩写SFC）是一种特殊的文件格式，允许将vue组件的模板、逻辑和样式封装在单个文件中
+
+**加载组件**
+
+1. 引入组件```import MyComponentVue from './components/MyComponentVue.vue'```，写在```<script>```里面
+2. 挂载组件```components:{MyComponentVue}```，写```export default```里面
+3. 显示组件```<my-componentvue/>```或者```<MyComponentVue/>```，写```<template>```里面
+
+如果在```<style>```标签里加入```scoped```属性，就代表这里面的样式只在当前组件生效
+
+组件的组织通常会以一颗嵌套组件树的形式来组织
+
+组件和组件之间是要存在交互的，否则完全没关系那组件就没什么意义了
+
+```prop```是可以在组件上注册一些自定义attribute
+
+如果父级写了```<MyConponent :title='biaoti'/>```想把```biaoti```这个变量的值传给子级的```title```属性，那么子级需要做接收，在```export default```里写```props:{title:{type:String,default:'默认值'}}```
+
+prop传递参数是没有类型限制的，注意，数组和对象必须使用函数进行返回，即：
+```
+default:function(){
+return []
+}
+```
+<br>
+
+上面是从父级传到子级，想要实现反向传递数据可以利用自定义事件来实现```$emit```
+
+```
+<botton @click='send'>点击传递<botton>
+```
+```
+data(){
+return{msg:'123456789'}
+}
+method:{
+send(){}
+this.$emit('onEvent',this.msg)   //参数一是字符串，参数二是要传递的数据
+}
+```
+父组件里就把那个字符串当事件来看
+```<MyComponentVue @onEvent="getdata"/>```
+```
+method:{
+getdata(data){
+console.log(data)
+    }
+}
+```
+<br>
+
+每个组件在被创建时都要经过一系列初始化过程，如需要设置数据监听、编译模板、将实例挂载到DOM并在数据变化时更新DOM等。在这个过程中会运行一些叫**生命周期钩子**的函数，给了用户在不同阶段添加自己代码的机会
+
+生命周期函数为了方便记忆可以分类：
+
+1. 创建时：```beforeCreate```、```created```
+2. 渲染时：```beforeMount```、```mounted```
+3. 更新时：```beforeUpdate```、```updated```
+4. 卸载时：```beforeUnmount```、```unmounted```
+
+一般会把网络请求放在```mounted```里面
+* **
 
 
 
